--- a/Invaxion Server Emulator Installer/Invaxion Server Emulator Installer.csproj
+++ b/Invaxion Server Emulator Installer/Invaxion Server Emulator Installer.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="6.0.0" />
     <PackageReference Include="Ookii.Dialogs.Wpf" Version="5.0.1" />
   </ItemGroup>
 
